labs/api-versions/solution/ingress-converted.yaml
# Example of converted Ingress from v1beta1 to v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-converted
  labels:
    kubernetes.courselabs.co: api-versions
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
